# deriddl-rs

./: .gitignore  Cargo.toml  DATABRICKS_DRIVERS.md  LICENSE  README.md  config.toml  gen_migrations.sh  schema_dump.sql  test_sqlite.db  test_sqlite_migrations.py  test_sqlite_migrations.sh
config/: dev.toml
migrations/: 0001_create_test_table_1.sql  0001_init_schema.sql  0002_add_users_table.sql  0002_insert_test_table_1.sql  0003_add_index.sql  0003_update_test_table_1.sql  0004_add_vendors_table.sql  0004_delete_test_table_1.sql  0006_create_test_table_2.sql  0007_insert_test_table_2.sql  0008_update_test_table_2.sql  0009_delete_test_table_2.sql  0011_create_test_table_3.sql  0012_insert_test_table_3.sql  0013_update_test_table_3.sql  0014_delete_test_table_3.sql  0015_drop_test_table_3.sql  0016_create_test_table_4.sql  0017_insert_test_table_4.sql  0018_update_test_table_4.sql  0019_delete_test_table_4.sql  0020_drop_test_table_4.sql  0021_create_test_table_5.sql  0022_insert_test_table_5.sql  0023_update_test_table_5.sql  0024_delete_test_table_5.sql  0025_drop_test_table_5.sql  0026_create_users_table.sql  R__create_views.sql  R__refresh_statistics.sql  R__update_functions.sql
src/: lib.rs  logger.rs  main.rs
src/cli/: args.rs  dispatch.rs
src/dialects/: base.rs  mod.rs  registry.rs
src/dialects/databricks/: config.rs  dialect.rs  dialect.toml  drivers.rs  mod.rs
src/dialects/generic/: dialect.toml  mod.rs
src/dialects/mysql/: dialect.toml  mod.rs
src/dialects/postgres/: dialect.toml  mod.rs
src/dialects/sqlite/: dialect.toml  mod.rs
src/executor/: connection.rs  mod.rs  runner.rs
src/model/: config.rs  migration.rs  mod.rs
src/orchestrator/: apply.rs  baseline.rs  health.rs  migration_loader.rs  mod.rs  plan.rs  planner.rs  rollback.rs  status.rs  validate.rs  validator.rs
src/tracker/: mod.rs  schema_init.rs  version_store.rs
tests/: cli_basics.rs  common.rs  config_tests.rs  health_tests.rs  integration_tests.rs  migration_tests.rs  repeatable_migration_tests.rs  rollback_integration_tests.rs  rollback_tests.rs  validation_tests.rs
