[package]
name = "deriDDL"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast, deterministic ODBC schema migration tool built in Rust"
repository = "https://github.com/yourusername/deriDDL"
keywords = ["database", "migration", "odbc", "sql", "schema"]
categories = ["database", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
